inspector-new/client-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: real_svc
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: http
          http_filters:
          - name: envoy.router
            typed_config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    listener_filters:
      - name: envoy.listener.original_dst
        typed_config: {}
      - name: envoy.listener.tls_inspector
        typed_config: {}
      - name: envoy.listener.http_inspector
        typed_config: {}
    filter_chains:
    - filter_chain_match:
        application_protocols: ["http/1.1", "h2"]
      filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: PassthroughCluster
          http_filters:
          - name: envoy.router
            typed_config: {}
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: tcp
          cluster: PassthroughCluster
  clusters:
  - name: PassthroughCluster
    type: ORIGINAL_DST
    connect_timeout: 10s
    lb_policy: ORIGINAL_DST_LB
  # - name: tcp
  #   connect_timeout: 0.25s
  #   type: strict_dns
  #   lb_policy: round_robin
  #   load_assignment:
  #     cluster_name: tcp
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: httpbin.org
  #               port_value: 80
  - name: http
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    load_assignment:
      cluster_name: http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 52.73.47.183
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
